Keep generated command diagnostics deterministic